# hip_raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
old_src/: BoundingBox.h  Bvh.h  HipHelper.h  Hittable.h  Image.h  Material.h  Quad.h  Scene.h  Texture.h  Transform.h  Triangle.h  TriangleMesh.h  camera.h  main.cpp  sphere.h  vec3.h
src/: BoundingBox.h  Bvh.h  Image.h  Material.h  Quad.h  Scene.h  Transform.h  TriangleMesh.h  camera.cpp  hello_world.cpp  main.cpp  math.cpp  parallel.cpp  sphere.h  vec3.h  world.cpp
test/: hello_world_test.cpp  math_test.cpp
